# language_learner

./: .gitignore  Dockerfile  docker-compose.yml
.github/workflows/: main.yml  prod.yml
api/: .env  Cargo.toml
api/assets/: key.pem
api/src/: main.rs  routes.rs
api/src/application/: mod.rs  traits.rs
api/src/application/usecases/: get_all_words.rs  mod.rs
api/src/database/: migrations.rs  mod.rs
api/src/domain/models/: mod.rs  translation.rs  word.rs
api/src/infrastructure/: mod.rs
api/src/infrastructure/neo4j/: mod.rs  neo4j_repo.rs
api/src/infrastructure/web/: handlers.rs
api/src/interface/: mod.rs
api/src/interface/dtos/: mod.rs  translation_dto.rs
api/src/interface/errors/: app_error.rs
api/src/interface/handlers/: delete_translation_all_handler.rs  get_all_words_handler.rs  get_translation_all_handler.rs  mod.rs  ping_api_handler.rs  ping_db_handler.rs  upsert_translation_file_handler.rs  upsert_translation_handler.rs
api/src/interface/middlewares/: error_middleware.rs
api/src/models/: mod.rs  word.rs
api/src/router/: language_controller.rs  mod.rs
api/src/routes/: mod.rs  ping.rs  translation.rs  words.rs
assets/: cert.pem
language_learner_api/: Cargo.toml
language_learner_api/src/: main.rs
language_learner_api/src/database/: mod.rs
language_learner_api/src/router/: mod.rs
ui/: .gitignore  README.md  pubspec.yaml
ui/lib/: context_service.dart  main.dart  models.dart  navigation.dart
ui/linux/: CMakeLists.txt
ui/web/: index.html
ui/windows/: CMakeLists.txt
ui2/: README.md  pubspec.yaml
ui2/lib/: main.dart
(+58 files in other folders)
