[package]
name = "language_learner_api"
version = "0.1.0"
edition = "2024"

[dependencies]
neo4rs = "0.8.0"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
axum = { version = "0.8.4", features = ["macros"] }
tower-http = { version = "0.6", features = ["trace"] }
dotenvy = "0.15" # Add dotenvy crate
